# sonobe-btc

./: .gitignore  .gitmodules  Cargo.toml  README.md  setup-machine-and-run-proving.sh  setup-machine.sh  solidity-calldata.inputs
contracts/script/: BTCLightClient.s.sol  FetchLightClientState.s.sol
contracts/src/: BTCLightClient.sol  BTCLightClientNovaVerifier.sol
contracts/test/: BTCLightClient.t.sol
src/: main.rs  utils.rs
src/data/: btc-blocks.json
