[package]
name = "folding-schemes-btc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-r1cs-std = { git = "https://github.com/winderica/r1cs-std", branch="cherry-pick" }
folding-schemes = { git = "https://github.com/privacy-scaling-explorations/sonobe.git", package="folding-schemes", branch="circom-external-inputs", features=["light-test"] }
solidity-verifiers = { git = "https://github.com/privacy-scaling-explorations/sonobe.git", package="solidity-verifiers", branch="circom-external-inputs" }
ark-light-bitcoin-client = { git = "https://github.com/dmpierre/ark-light-bitcoin-client.git", branch="feat/use-fp-vars-only" }
ark-ff = "0.4.0"
ark-relations = "0.4.0"
serde_json = "1.0.114"
num-bigint = "0.4.3"
num-traits = "0.2.15"
hex = "0.4.3"
hex-literal = "0.4.1"
ark-bn254 = {version="0.4.0", features=["r1cs"]}
ark-grumpkin = {version="0.4.0", features=["r1cs"]}
ark-std = "0.4.0"
ark-ec = "0.4.0"
ark-crypto-primitives = "0.4.0"
ark-poly-commit = "0.4.0"
ark-groth16 = "0.4.0"

[patch.crates-io]
ark-r1cs-std = { git = "https://github.com/winderica/r1cs-std", branch="cherry-pick" }
ark-bn254 = { git = "https://github.com/arnaucube/ark-curves-cherry-picked", branch="cherry-pick"}
ark-grumpkin = { git = "https://github.com/arnaucube/ark-curves-cherry-picked", branch="cherry-pick"}
